@@ -26,6 +26,8 @@ include::content/docs/variables.adoc-include[]
 [[v0.36.7]]
 == 0.36.7 (TBD)
 
+icon:plus[] REST: An error will now be returned when sending the `newPassword` field in the login request when the `forcedPasswordChange` flag has not been set.
+
 icon:plus[] REST: The webroot responses will now contain the header `Webroot-Node-Uuid` which identifies the node of the loaded content.
 
 icon:plus[] REST: The authentication and element loading performance has been increased.
